# qc-poetry-gpt4all

./: README.md  pyproject.toml
poe_test/: __init__.py
