[tool.poetry]
name = "poe-test"
version = "0.1.0"
description = ""
authors = ["qiaochao <qiaochao@icourt.cc>"]
readme = "README.md"
packages = [{include = "poe_test"}]

[tool.poetry.dependencies]
python = "^3.10"
koa = "^0.3"
pygpt4all = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
